# PyHydroIntel

./: .gitignore  Help for Novice Users.md  LICENSE  README.md  pyproject.toml
examples/: config_sample.yaml  run_example.py  silt_config.yaml
examples/silt_depth_detection/: config_sample1.yaml  config_sample3.yaml  run_example_sample1.py  run_example_sample2.py  run_example_sample3.py
src/: silt_detection.py
src/pyhydrointel/: cli.py  config.py
src/pyhydrointel/silt/: detector.py  plotter.py
tests/: test_cli_silt_detect.py
