[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhydrointel"
version = "0.1.0"
description = "AI-driven hydroinformatics tools for wastewater systems."
authors = [
  { name="Mehmet Bülent Ercan", email="your.email@example.com" },
]
dependencies = [
  "tensorflow",
  "numpy",
  "pandas",
  "pillow",
  "matplotlib",
  "pyyaml"
]
requires-python = ">=3.9"